change crueltouch to tchiiz

--- a/templates/administration/add/add_album.html
+++ b/templates/administration/add/add_album.html
@@ -1,7 +1,7 @@
 {% extends 'administration/base.html' %}
 {% load i18n %}
 {% load static %}
-{% block title %}Crueltouch | {% translate "Create new album" %}{% endblock %}
+{% block title %}TCHIIZ | {% translate "Create new album" %}{% endblock %}
 {% block body %}
     <style>
         .container-photos {
