--- a/templates/administration/add/add_client_photos.html
+++ b/templates/administration/add/add_client_photos.html
@@ -1,7 +1,7 @@
 {% extends 'administration/base.html' %}
 {% load i18n %}
 {% load static %}
-{% block title %}Crueltouch | {{ title }}{% endblock %}
+{% block title %}TCHIIZ | {{ title }}{% endblock %}
 {% block customCSS %}
     <style>
         .not-visible {
