--- a/templates/administration/add/invoice_form.html
+++ b/templates/administration/add/invoice_form.html
@@ -1,7 +1,7 @@
 {% extends 'administration/base.html' %}
 {% load i18n %}
 {% load static %}
-{% block title %}Crueltouch | {% translate "Generate Invoice" %}{% endblock %}
+{% block title %}TCHIIZ | {% translate "Generate Invoice" %}{% endblock %}
 {% block body %}
     <section class="content content-wrapper">
         <div class="container-fluid">
