--- a/templates/administration/base.html
+++ b/templates/administration/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% block customMetaTag %}{% endblock %}
     <link rel="icon" type="image/x-icon" href="{% static 'homepage/img/icon/favicon.ico' %}">
-    <title>{% block title %}Crueltouch | {% translate "Dashboard" %}{% endblock %}</title>
+    <title>{% block title %}TCHIIZ | {% translate "Dashboard" %}{% endblock %}</title>
 
     <!-- Google Font: Source Sans Pro -->
     <link rel="stylesheet"
@@ -137,7 +137,7 @@
             <img src="{% static 'homepage/img/icon/android-icon-48x48.png' %}" alt=""
                  class="brand-image img-circle elevation-3"
                  style="opacity: .8">
-            <span class="brand-text font-weight-light">CRUELTOUCH</span>
+            <span class="brand-text font-weight-light">TCHIIZ Studio</span>
         </a>
 
         <!-- Sidebar -->
@@ -418,7 +418,7 @@
     <footer class="main-footer">
         <div class="copyright" id="copyright">
             Copyright &copy;<script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
-            All rights reserved | CRUELTOUCH | <a href="https://adamspierredavid.com" target="_blank">APD</a>
+            All rights reserved | TCHIIZ Studio | <a href="https://adamspierredavid.com" target="_blank">APD</a>
         </div>
     </footer>
 
