--- a/templates/administration/download/downloadable_images.html
+++ b/templates/administration/download/downloadable_images.html
@@ -1,7 +1,7 @@
 {% extends 'homepage/base.html' %}
 {% load i18n %}
 {% load static %}
-{% block title %}CRUELTOUCH | {% trans "Downloads" %}{% endblock %}
+{% block title %}TCHIIZ | {% trans "Downloads" %}{% endblock %}
 
 {% block body %}
     <div class="container">
