--- a/templates/administration/edit/update_requested_session.html
+++ b/templates/administration/edit/update_requested_session.html
@@ -1,7 +1,7 @@
 {% extends 'administration/base.html' %}
 {% load i18n %}
 {% load static %}
-{% block title %}Crueltouch | {% translate "Update requested session" %}{% endblock %}
+{% block title %}Tchiiz | {% translate "Update requested session" %}{% endblock %}
 {% block body %}
     <section class="content content-wrapper">
         <div class="container-fluid">
