--- a/templates/administration/list/list_album_client.html
+++ b/templates/administration/list/list_album_client.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load static %}
 
-{% block title %}CRUELTOUCH | {% translate "View chosen photos" %}{% endblock %}
+{% block title %}TCHIIZ | {% translate "View chosen photos" %}{% endblock %}
 
 {% block pageTitle %}
     {% translate "View chosen photos" %}
