--- a/templates/administration/list/list_album_client_photos.html
+++ b/templates/administration/list/list_album_client_photos.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="{% static 'client/css/modifying_photos_albums.css' %}">
 {% endblock %}
 
-{% block title %}CRUELTOUCH | {{ title }}{% endblock %}
+{% block title %}TCHIIZ | {{ title }}{% endblock %}
 
 {% block pageTitle %}
 
