--- a/templates/administration/list/list_created_link.html
+++ b/templates/administration/list/list_created_link.html
@@ -1,7 +1,7 @@
 {% extends 'administration/list/data.html' %}
 {% load i18n %}
 {% load static %}
-{% block title %}CRUELTOUCH | {{ title }}{% endblock %}
+{% block title %}TCHIIZ | {{ title }}{% endblock %}
 
 {% block pageTitle %}
     {{ title }}
