--- a/templates/administration/list/list_requested_session.html
+++ b/templates/administration/list/list_requested_session.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load static %}
 
-{% block title %}CRUELTOUCH | {% translate "Requested photoshoot list" %}{% endblock %}
+{% block title %}TCHIIZ | {% translate "Requested photoshoot list" %}{% endblock %}
 
 {% block pageTitle %}
     {% translate "Requested photoshoot list" %}
