--- a/templates/client/base.html
+++ b/templates/client/base.html
@@ -17,7 +17,7 @@
             <li>
                 <a href="{% url 'homepage:index' %}">
                     <span class="icon"><ion-icon name="camera-outline"></ion-icon></span>
-                    <span class="title">CruelTouch</span>
+                    <span class="title">Tchiiz Studio</span>
                 </a>
             </li>
             <li>
