--- a/templates/client/booking_and_promotions/bookme.html
+++ b/templates/client/booking_and_promotions/bookme.html
@@ -4,7 +4,7 @@
 {% block title %}{% trans "Book me" %}{% endblock %}
 {% block canonical %}{% url 'client:book_me' %}{% endblock %}
 {% block description %}
-    {% blocktrans %}Book your photography session with Crueltouch and experience the difference. Professional,
+    {% blocktrans %}Book your photography session with Tchiiz Studio and experience the difference. Professional,
         personalized service and stunning results. Schedule now.{% endblocktrans %}
 {% endblock %}
 {% block content %}
