--- a/templates/client/client_view/base.html
+++ b/templates/client/client_view/base.html
@@ -1,7 +1,7 @@
 {% extends 'homepage/base.html' %}
 {% load i18n %}
 {% load static %}
-{% block title %}CRUELTOUCH | Client{% endblock %}
+{% block title %}TCHIIZ | Client{% endblock %}
 {% block login %}
     <li>
         <a href="{% url 'client:client_homepage' %}">Dashboard</a>
