--- a/templates/client/client_view/index.html
+++ b/templates/client/client_view/index.html
@@ -1,6 +1,6 @@
 {% extends 'client/client_view/base.html' %}
 {% load static %}
-{% block title %}CRUELTOUCH | Dashboard{% endblock %}
+{% block title %}TCHIIZ | Dashboard{% endblock %}
 
 {% block body %}
     {% if album %}
