--- a/templates/client/owners_view/owner_addphotos.html
+++ b/templates/client/owners_view/owner_addphotos.html
@@ -59,7 +59,7 @@
                                 {% endfor %}
                             </select>
                         </div>
-                    <p>if you can't select a client click <a href="https://crueltouch.com/admin/client/album/add/">here</a> to add one.</p>
+                    <p>if you can't select a client click <a href="https://tchiiz.com/admin/client/album/add/">here</a> to add one.</p>
 
                         <br>
 
