--- a/templates/homepage/detailed.html
+++ b/templates/homepage/detailed.html
@@ -1,5 +1,5 @@
 {% extends 'homepage/base.html' %}
-{% block title %}CRUELTOUCH | Detailed{% endblock %}
+{% block title %}TCHIIZ | Detailed{% endblock %}
 
 {% block body %}
     <body>
