--- a/templates/homepage/index_about_me.html
+++ b/templates/homepage/index_about_me.html
@@ -2,7 +2,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-<title>CRUELTOUCH | {% trans "About us" %} </title>
+<title>TCHIIZ | {% trans "About us" %} </title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
