--- a/templates/legal/privacy_policy.html
+++ b/templates/legal/privacy_policy.html
@@ -59,7 +59,7 @@
                                     {% blocktranslate %}
                                         (referred to as either &quot;the Company&quot;, &quot;We&quot;,
                                         &quot;Us&quot; or &quot;Our&quot; in this Agreement) refers to
-                                        crueltouch.com.
+                                        tchiiz.com.
                                     {% endblocktranslate %}
                                 </p>
                             </li>
@@ -122,9 +122,9 @@
                             </li>
                             <li>
                                 <p><strong>{% trans 'Website' %}</strong>
-                                    {% trans "refers to crueltouch.com, accessible from" %} <a
-                                            href="https://www.crueltouch.com" rel="external nofollow noopener"
-                                            target="_blank">https://www.crueltouch.com</a></p>
+                                    {% trans "refers to tchiiz.com, accessible from" %} <a
+                                            href="https://www.tchiiz.com" rel="external nofollow noopener"
+                                            target="_blank">https://www.tchiiz.com</a></p>
                             </li>
                             <li>
                                 <p><strong>{% trans 'You' %}</strong>
@@ -393,8 +393,8 @@
                             </li>
                             <li>
                                 {% trans "By visiting this page on our website:" %}
-                                <a href="https://crueltouch.com/contact/" target="_parent">
-                                    https://crueltouch.com/contact/
+                                <a href="https://tchiiz.com/contact/" target="_parent">
+                                    https://tchiiz.com/contact/
                                 </a>
                             </li>
                         </ul>
