--- a/templates/legal/terms_and_conditions.html
+++ b/templates/legal/terms_and_conditions.html
@@ -51,8 +51,8 @@
                 <p>
                     {% blocktranslate %}
                         These Terms of Use constitute a legally binding agreement made between you, whether personally
-                        or on behalf of an entity (“you”) and crueltouch.com ("Company," “we," “us," or “our”),
-                        concerning your access to and use of the https://crueltouch.com website as well as any
+                        or on behalf of an entity (“you”) and tchiiz.com ("Company," “we," “us," or “our”),
+                        concerning your access to and use of the https://tchiiz.com website as well as any
                         other media form, media channel, mobile website or mobile application related, linked, or
                         otherwise connected thereto (collectively, the “Site”).  You agree that by accessing the Site,
                         you have
@@ -504,7 +504,7 @@
             <div id="privacypolicy1">
                 <h2>{% translate "12. PRIVACY POLICY" %}</h2>
                 <p>
-                    {% blocktranslate with url="https://crueltouch.com/privacy-policy" %}
+                    {% blocktranslate with url="https://tchiiz.com/privacy-policy" %}
                         We care about data privacy and security. Please review our
                         <a href="{{ url }}">Privacy Policy</a>. By using the Site, you agree
                         to be bound by our Privacy Policy, which is incorporated into these Terms of Use. Please
@@ -629,7 +629,7 @@
                         the United Nations Convention of Contracts for the International Sale of Goods is expressly
                         excluded. If your habitual residence is in the EU, and you are a consumer, you additionally
                         possess the protection provided to you by obligatory provisions of the law of your country of
-                        residence. crueltouch.com and yourself both agree to submit to the non-exclusive
+                        residence. tchiiz.com and yourself both agree to submit to the non-exclusive
                         jurisdiction of the courts of Florida, which means that you may make a claim to defend
                         your consumer protection rights in regard to these Terms of Use in USA, or in the EU country
                         in which you reside.
@@ -830,7 +830,7 @@
                     {% endblocktranslate %}
                 </p>
                 <p>
-                    <a href="{% url 'flatpages:contact' %}">https://crueltouch.com/contact</a>
+                    <a href="{% url 'flatpages:contact' %}">https://tchiiz.com/contact</a>
                 </p>
             </div>
         </div>
