--- a/templates/administration/email_template/client_email.html
+++ b/templates/administration/email_template/client_email.html
@@ -99,7 +99,7 @@
                                         style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 36px; font-weight: 800; line-height: 48px;"
                                         class="mobile-center">
                                         <a href="https://icerd.co" target="_blank">
-                                            <img alt="Logo" src="https://crueltouch.com/logo"
+                                            <img alt="Logo" src="https://tchiiz.com/logo"
                                                  style="display: block;
                                                     width: 100px;
                                                     max-width: 100px;
@@ -206,7 +206,7 @@
                                style="max-width:600px;">
                             <tr>
                                 <td align="center">
-                                    <img src="https://crueltouch.com/logo-mini/" width="37" height="37"
+                                    <img src="https://tchiiz.com/logo-mini/" width="37" height="37"
                                          style="display: block; border: 1px solid black;"/>
                                 </td>
                             </tr>
@@ -223,7 +223,7 @@
                                     style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 14px; font-weight: 400; line-height: 24px;">
                                     <p style="font-size: 14px; font-weight: 400; line-height: 20px; color: #777777;">
                                         If you don't want to receive any more email from us, <a
-                                            href="https://crueltouch.com/contact/" target="_blank"
+                                            href="https://tchiiz.com/contact/" target="_blank"
                                             style="color: #777777;">please let us know</a>.
                                     </p>
                                 </td>
@@ -268,8 +268,8 @@
                     <td bgcolor="#ffffff" align="center"
                         style="padding: 30px 30px 30px 30px; color: #666666; font-family: Helvetica, Arial, sans-serif; font-size: 14px; font-weight: 400; line-height: 18px;">
                         <p style="margin: 0;">Copyright &copy;<script>document.write(new Date().getFullYear());</script>
-                            All rights reserved | <a href="https://crueltouch.com" target="_blank"
-                                                     style="text-decoration: none">Crueltouch</a> | Made with love by <a
+                            All rights reserved | <a href="https://tchiiz.com" target="_blank"
+                                                     style="text-decoration: none">Tchiiz Studio</a> | Made with love by <a
                                     href="https://adamspierredavid.com" target="_blank" style="text-decoration: none">APD</a>
                         </p>
                     </td>
