--- a/templates/administration/email_template/late_reply_session_request_received.html
+++ b/templates/administration/email_template/late_reply_session_request_received.html
@@ -72,7 +72,7 @@
 
 <!-- HIDDEN PREHEADER TEXT -->
 <div style="display: none; font-size: 1px; color: #fefefe; line-height: 1px; font-family: Open Sans, Helvetica, Arial, sans-serif; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden;">
-    Hi {{ full_name }}, the crueltouch team is pleased to announce that your reservation has been processed.
+    Hi {{ full_name }}, the Tchiiz team is pleased to announce that your reservation has been processed.
 </div>
 
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
@@ -99,7 +99,7 @@
                                         style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 36px; font-weight: 800; line-height: 48px;"
                                         class="mobile-center">
                                         <a href="https://icerd.co" target="_blank">
-                                            <img alt="Logo" src="https://crueltouch.com/logo"
+                                            <img alt="Logo" src="https://tchiiz.com/logo"
                                                  style="display: block;
                                                     width: 100px;
                                                     max-width: 100px;
@@ -135,7 +135,7 @@
                                     <img src="https://litmus-builder.s3.amazonaws.com/8cd68d09-3d9e-45d3-9cd2-f8f4969d69bd"
                                          width="125" height="120" style="display: block; border: 0px;"/><br>
                                     <h2 style="font-size: 30px; font-weight: 800; line-height: 36px; color: #333333; margin: 0;">
-                                        Thank you for booking Crueltouch!
+                                        Thank you for booking Tchiiz Studio!
                                     </h2>
                                 </td>
                             </tr>
@@ -143,7 +143,7 @@
                                 <td align="left"
                                     style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 24px; padding-top: 10px;">
                                     <p style="font-size: 16px; font-weight: 400; line-height: 24px; color: #777777;">
-                                        Hi {{ full_name }}, the crueltouch team is pleased to announce that your
+                                        Hi {{ full_name }}, the Tchiiz team is pleased to announce that your
                                         reservation has been successfully submitted. We will do our best to process it.
                                         You will receive an email shortly with the next steps.
                                         <br>
@@ -300,7 +300,7 @@
                                     <table border="0" cellspacing="0" cellpadding="0">
                                         <tr>
                                             <td align="center" style="border-radius: 5px;" bgcolor="#66b3b7">
-                                                <a href="https://crueltouch.com/portfolio/" target="_blank"
+                                                <a href="https://tchiiz.com/portfolio/" target="_blank"
                                                    style="font-size: 18px; font-family: Open Sans, Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; border-radius: 5px; background-color: #66b3b7; padding: 15px 30px; border: 1px solid #66b3b7; display: block;">Awesome</a>
                                             </td>
                                         </tr>
@@ -326,7 +326,7 @@
                                style="max-width:600px;">
                             <tr>
                                 <td align="center">
-                                    <img src="https://crueltouch.com/logo-mini/" width="37" height="37"
+                                    <img src="https://tchiiz.com/logo-mini/" width="37" height="37"
                                          style="display: block; border: 1px solid black;"/>
                                 </td>
                             </tr>
@@ -343,7 +343,7 @@
                                     style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 14px; font-weight: 400; line-height: 24px;">
                                     <p style="font-size: 14px; font-weight: 400; line-height: 20px; color: #777777;">
                                         If you don't want to receive any more email from us, <a
-                                            href="https://crueltouch.com/contact/" target="_blank"
+                                            href="https://tchiiz.com/contact/" target="_blank"
                                             style="color: #777777;">please let us know</a>.
                                     </p>
                                 </td>
@@ -388,8 +388,8 @@
                     <td bgcolor="#ffffff" align="center"
                         style="padding: 30px 30px 30px 30px; color: #666666; font-family: Helvetica, Arial, sans-serif; font-size: 14px; font-weight: 400; line-height: 18px;">
                         <p style="margin: 0;">Copyright &copy;<script>document.write(new Date().getFullYear());</script>
-                            All rights reserved | <a href="https://crueltouch.com" target="_blank"
-                                                     style="text-decoration: none">Crueltouch</a> | Made with love by <a
+                            All rights reserved | <a href="https://tchiiz.com" target="_blank"
+                                                     style="text-decoration: none">Tchiiz Studio</a> | Made with love by <a
                                     href="https://adamspierredavid.com" target="_blank" style="text-decoration: none">APD</a>
                         </p>
                     </td>
