--- a/templates/administration/password/has_to_change_password.html
+++ b/templates/administration/password/has_to_change_password.html
@@ -25,7 +25,7 @@
 <div class="login-box">
     <div class="card card-outline card-primary">
         <div class="card-header text-center">
-            <a href="{% url 'homepage:index' %}" class="h1"><b>CRUELTOUCH</b>.com</a>
+            <a href="{% url 'homepage:index' %}" class="h1"><b>TCHIIZ</b>.com</a>
         </div>
         <div class="card-body">
             <p class="login-box-msg">
