--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -32,7 +32,7 @@
                 <p class="text-black important" style="color: black; font-weight: 600">
                     {% trans "Click here to book" %}
                 </p>
-                <a href="{% url 'client:book_me_session' 1 %}" class="btn btn-primary btn-xl js-scroll-trigger"
+                <a href="{% url 'homepage:services_offered' %}" class="btn btn-primary btn-xl js-scroll-trigger"
                    style="background-color: #6c757d;">{% trans "Book Now" %}</a>
             </div>
         </div>
@@ -44,7 +44,7 @@
         <div class="intro-warp">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-xl-6 col-lg-7 p-0">
+                    <div class="col-xl-8 col-lg-7 p-0">
                         <div class="intro-text">
                             <h1 style="padding-left: 5px; padding-right: 5px; font-size:38px;">
                                 {% trans "My name is Roos Laurore" %}.
@@ -57,30 +57,30 @@
                                     photography. I spent 1 year in France doing photography and sharing with others in
                                     the field. I learned how to use Photoshop, and I'm really good at it. While in
                                     France, I landed my first wedding gig on a yatch. I am actually interested in
-                                    computer science and long term investing. I'm planning to travel a little in the
-                                    next years in Indonesia, Greece and China. Long term goal : Digital Nomad.
+                                    computer science and long-term investing. I'm planning to travel a little in the
+                                    next years in Indonesia, Greece and China. Long-term goal: Digital Nomad.
                                 {% endblocktranslate %}
                             </p>
                             <a href="{% url 'pf:index_portfolio' %}"
                                class="sp-link">{% trans "Take a look @my portfolio" %}</a>
                         </div>
                     </div>
-                    <div class="col-xl-6 col-lg-5 p-0">
-                        <div class="skill-warp">
-                            <div class="single-progress-item">
-                                <div class="progress-bar-style" data-progress="95"></div>
-                                <p>{% trans "Business" %}</p>
-                            </div>
-                            <div class="single-progress-item">
-                                <div class="progress-bar-style" data-progress="100"></div>
-                                <p>{% trans "Passion" %}</p>
-                            </div>
-                            <div class="single-progress-item">
-                                <div class="progress-bar-style" data-progress="90"></div>
-                                <p>{% trans "Travels" %}</p>
-                            </div>
-                        </div>
-                    </div>
+{#                    <div class="col-xl-6 col-lg-5 p-0">#}
+{#                        <div class="skill-warp">#}
+{#                            <div class="single-progress-item">#}
+{#                                <div class="progress-bar-style" data-progress="95"></div>#}
+{#                                <p>{% trans "Business" %}</p>#}
+{#                            </div>#}
+{#                            <div class="single-progress-item">#}
+{#                                <div class="progress-bar-style" data-progress="100"></div>#}
+{#                                <p>{% trans "Passion" %}</p>#}
+{#                            </div>#}
+{#                            <div class="single-progress-item">#}
+{#                                <div class="progress-bar-style" data-progress="90"></div>#}
+{#                                <p>{% trans "Travels" %}</p>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
                 </div>
             </div>
         </div>
